--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -17,4 +17,7 @@
       %p Docenti qualificati, che dividono il loro tempo tra la professione e l’insegnamento, portano in aula le loro esperienze rappresentano la migliore garanzia di un reale confronto con il mondo del lavoro.
       %p Una didattica esclusiva, improntata sulla cultura del progetto, che esercita pensiero e creatività e insegna a finalizzare le idee attraverso gli strumenti e i software più aggiornati utilizzati dai professionisti del settore.
 
-  .separator50
+      .separator30
+      #photos{"data-set_id" => "72157641136880313"}
+        %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/ID/"}
+      .separator30
