--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -210,17 +210,17 @@
           .separator1
       / end social nav
       / header and menu
-      .line.bg-white
+      #slide.line.bg-white
         .separator15
         .line-compress.line-max.header
           .col2.line-tablet.center-content-tablet
             %a{:href => "/pag/l_accademia"}
-              %img{:src => "data:image/png;base64,#{logo_base64}", :width => "120"}/
+              %img{:src => "/images/logo.png", :width => "220"}/
 
           .col8.center-content.desktop
             .header-menu.desktop
-              .separator50
-              .separator30
+              .separator15
+              .separator10
               - nav_link :l_accademia
               - nav_link :corsi
               - nav_link :news
@@ -228,6 +228,9 @@
               - nav_link :borse_di_studio
               - nav_link :open_days
               - nav_link :contatti
+          .separator30
+          %h1.slogan.color-white
+            Welcome to accademia
         .separator15
       / end header and menu
 
