--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -2,7 +2,8 @@
 .line.bg-white
   .line-compress.line-max
     .separator15
-    %h1.line.center-content-tablet La Gallery
+    %h1.line.center-content.article-title.font-custom
+      La Gallery
     .separator10
     .separator15.pattern
     .separator30
