--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -1,7 +1,8 @@
-.line.bg-white
+.line.bg-muted
   .line-compress.line-max
     .separator15
-    %h1.line.center-content-tablet I Corsi
+    %h1.line.center-content.article-title.font-custom
+      I Corsi
     .separator10
     .separator15.pattern
     .separator30
