--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -1,11 +1,11 @@
 .bg-white
 
-= render partial: "pages_new/slider"
+//= render partial: "pages_new/slider"
 
 .line.bg-white
   .line-compress.line-max
-    .separator15
-    %h1.line.center-content-tablet
+    .separator30
+    %h1.line.center-content.article-title.font-custom
       L'Accademia
     .separator10
     .separator15.pattern
@@ -21,3 +21,5 @@
       #photos{"data-set_id" => "72157641136880313"}
         %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/ID/"}
       .separator30
+  = render partial: "pages_new/corsi"
+  = render partial: "pages_new/gallery"
