--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -2,7 +2,10 @@ body *, html * {
   letter-spacing: initial;
   letter-spacing: "";
   font-weight: 300;
-  font-family: "Open Sans", sans-serif; }
+  font-family: "Open Sans", Helvetica Neue, Arial, sans-serif; }
+  .font-custom *{
+    font-family: 'Montserrat';
+  }
 #cookies{
   background: rgba(0, 0, 0, .7);
 }
@@ -22,11 +25,20 @@ body *, html * {
   clear: both;
 }
 #slide{
-  background: url('http://localhost:3000/images/banner/main/2.png?1449853459');
-  background-size:cover;
-  background-repeat:no-repeat;
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 67%, rgba(0,0,0,0.7) 78%, rgba(0,0,0,1) 99%);
+background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%);
+background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('http://localhost:3000/images/banner/main/2.png?1449853459');
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
+  background-size: cover;
+  background-repeat: no-repeat;
   min-height:500px;
   height:100vh;
+}
+a.gallery_link img{
+  box-shadow: 0 3px 6px lightgrey;
+}
+.article-title{
+  font-size: 28px;
 }
 p {
   margin-top: 10px;
@@ -74,9 +86,9 @@ small {
   font-size:24px;
 }
 .header-menu a {
-  font-size: 14.5px;
+  font-size: 13px;
   padding: 7px 9px;
-  margin-right: 1%;
+  margin-left: 1%;
   color: white; }
   .header-menu a:hover {
     background-color: rgba(0, 0, 0, 0.1); }
