--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -229,9 +229,16 @@
               - nav_link :borse_di_studio
               - nav_link :open_days
               - nav_link :contatti
-          .separator30
-          %h1.slogan.color-white
-            Dal 1956 l’Accademia d’Arte e Design Leonetto Cappiello è il luogo ideale per esprimere la propria creatività
+          .separator100
+          .separator100
+          %a.line.center-content{:href=> js_void}
+            %i.fa.fa-play-circle.play-home-video.color-white
+          .separator100
+          .separator50
+          .line.slogan
+            %h1.color-white.font-custom
+              Dal 1956,
+              %h2.color-white.line il luogo ideale per esprimere la propria creatività
         .separator15
       / end header and menu
 
