--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -211,7 +211,7 @@
           .separator1
       / end social nav
       / header and menu
-      #slide.line.bg-white.font-custom
+      #slide.line.bg-white
         .separator15
         .line-compress.line-max.header
           .col2.line-tablet.center-content-tablet
@@ -230,12 +230,13 @@
               - nav_link :open_days
               - nav_link :contatti
           .separator100
-          .separator100
+          .separator50
+          .separator30
           %a.line.center-content{:href=> js_void}
             %i.fa.fa-play-circle.play-home-video.color-white
           .separator100
           .separator50
-          .line.slogan
+          .slogan
             %h1.color-white.font-custom
               Dal 1956,
               %h2.color-white.line il luogo ideale per esprimere la propria creatività
