--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -25,9 +25,9 @@ body *, html * {
   clear: both;
 }
 #slide{
-  background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 67%, rgba(0,0,0,0.7) 78%, rgba(0,0,0,1) 99%);
-background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%);
-background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('http://localhost:3000/images/banner/main/2.png?1449853459');
+  background: -moz-linear-gradient(top,  rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.6) 67%, rgba(0,0,0,0.7) 78%, rgba(0,0,0,1) 99%);
+background: -webkit-linear-gradient(top,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%);
+background: linear-gradient(to bottom,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('http://localhost:3000/images/banner/main/2.png?1449853459');
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
   background-size: cover;
   background-repeat: no-repeat;
@@ -96,6 +96,7 @@ opacity:1;
 cursor: pointer;
 }
 .header-menu a {
+  font-weight: 500;
   font-size: 13px;
   padding: 7px 9px;
   margin-left: 1%;
