--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -213,7 +213,7 @@
       / header and menu
       #slide.line.bg-white
         .separator15
-        .line-compress.line-max.header
+        .line-compress.line-max.header#top-menu
           .col2.line-tablet.center-content-tablet
             %a{:href => "/pag/l_accademia"}
               %img{:src => "/images/logo.png", :width => "220"}/
@@ -276,6 +276,20 @@
                 .separator2
         .separator15
       #fb-root
+      :javascript
+        var DynamicMenuBar = function DynamicMenuBar () {
+          console.log('Scroll Top', $(window).scrollTop());
+          if ($(window).scrollTop() > 100) {
+            $('#top-menu').addClass('scrolling');
+          } else if ($(window).scrollTop() <= 100){
+            $('#top-menu').removeClass('scrolling');
+          }
+        };
+        $(window).on('scroll resize', function () {
+        console.log('yeahhh');
+          DynamicMenuBar();
+        });
+        DynamicMenuBar();
       :javascript
         var bar = document.querySelector(".cookie_bar")
         var hideBar = function() {
