--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -173,7 +173,7 @@
       / social top nav
       .mobile.tablet
         .separator5
-      .line-compress.bg-black.color-white
+      .line.line-max.bg-black.color-white
         .line-compress.top-menu.line-max
           .separator5
           .top-menu-social.col4
@@ -286,7 +286,7 @@
           }
         };
         $(window).on('scroll resize', function () {
-        console.log('yeahhh');
+
           DynamicMenuBar();
         });
         DynamicMenuBar();
