--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -10,24 +10,27 @@
     .line.center-content
       .col5.line-tablet
         %a.bg-white.no-radius.col5.color-black.toggle-opacity-inverse-hover
-          .separator3
+          .separator5
           Grafica Pubblicitaria
-          .separator3
+          .separator5
         %a.bg-primary-2.color-white.no-radius.col5.toggle-opacity-inverse-hover
-          .separator3
+          .separator5
           Interior Design
-          .separator3
+          .separator5
       .separator10.tablet.mobile
       .col5.line-tablet
         %a.bg-primary-3.color-white.no-radius.col5.toggle-opacity-inverse-hover
-          .separator3
+          .separator5
           Digital Communication
-          .separator3
+          .separator5
         %a.bg-primary-4.color-white.no-radius.col5.toggle-opacity-inverse-hover
-          .separator3
+          .separator5
           Eventi
-          .separator3
+          .separator5
     .separator30
     .line.article
+      #photos{"data-set-id" => "72157659720037219"}
+        %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/ID/"}
+    .separator30
   .separator50
 / GALLERY
