--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -27,7 +27,7 @@ clear: both;
 #slide{
 background: -moz-linear-gradient(top,  rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.6) 67%, rgba(0,0,0,0.7) 78%, rgba(0,0,0,1) 99%);
 background: -webkit-linear-gradient(top,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%);
-background: linear-gradient(to bottom,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('http://localhost:3000/images/banner/main/2.png?1449853459');
+background: linear-gradient(to bottom,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('../images/home.jpg');
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#000000',GradientType=0 );
 background-size: cover;
 background-repeat: no-repeat;
@@ -75,7 +75,9 @@ margin: 0 2% 1% 0;
 width: 50%;
 max-width: 300px;
 min-width: 200px; }
-
+.top-menu {
+  max-width: 1300px;
+}
 .top-menu-social a {
 margin-right: 3%;
 font-size: 18px;
