--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -47,7 +47,7 @@ h1, h2, h3, h4, strong, b {
 font-weight: 500; }
 a {
 color: #d32b59;
-transition: all 0.1s linear; }
+transition: all 0.15s linear; }
 
 small {
 font-size: 12px; }
@@ -99,13 +99,15 @@ opacity:.6;
 opacity:1;
 cursor: pointer;
 }
+.header.scrolling , .header-scrolling *{
+  transition: all .25s linear;
+}
 .header.scrolling{
   box-shadow:0 2px 10px rgba(0,0,0, .1);
 z-index:9999999;
 min-width:100%;
 float: none;
 margin:0 auto;
-transition: all .2s linear;
 position:fixed;
 top:0;
 height:80px;
