double logo versions

--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -216,7 +216,8 @@
         .line-compress.line-max.header#top-menu
           .col2.line-tablet.center-content-tablet
             %a{:href => "/pag/l_accademia"}
-              %img{:src => "/images/logo.png", :width => "220"}/
+              %img.scroll{:src => "/images/logo.png", :width => "220"}
+              %img.no-scroll{:src => "/images/logo-white.png", :width => "220"}
 
           .col8.right-content.desktop
             .header-menu.desktop
