--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -106,6 +106,15 @@ cursor: pointer;
 .header.scrolling , .header-scrolling *{
   transition: all .25s linear;
 }
+.header.scrolling .no-scroll{
+  display: none;
+}
+.header .scroll{
+  display: none;
+}
+.header.scrolling .scroll {
+  display: inherit;
+}
 .header.scrolling{
   box-shadow:0 2px 10px rgba(0,0,0, .1);
 z-index:9999999;
