add local anchors

--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -1,4 +1,4 @@
-.line.bg-muted
+.line.bg-muted#corsi
   .line-compress.line-max
     .separator15
     %h1.line.center-content.article-title.font-custom
