--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -1,5 +1,5 @@
 / GALLERY
-.line.bg-white
+.line.bg-white#gallery
   .line-compress.line-max
     .separator15
     %h1.line.center-content.article-title.font-custom
