contatti in home missing google maps where are you???

--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -23,3 +23,4 @@
   = render partial: "pages_new/corsi"
   = render partial: "pages_new/borse_di_studio"
   = render partial: "pages_new/gallery"
+  = render partial: "pages_new/contatti"
