--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -11,43 +11,45 @@
     .separator30
     .line.article
       %h3 Accademia d’Arte e Design Leonetto Cappiello
-      .separator15
-      %p
-        Viale Michelangiolo 19, 50125
-        %span.caps FIRENZE
-        %br/
-        %span.caps TEL
-        |
-        = succeed ":" do
-          %span.caps FAX
-          +39 055 681 32 11
-        %br/
-        da Lunedì a Venerdì 9.00-13.00, 16.00-18.00
-      %p
-        %strong email
-        %br/
-        %a{:href => "mailto:info@accademiacappiello.it"} info@accademiacappiello.it
-      %p
-        N°Iscrizione
-        %span.caps CCIAA
-        di Firenze e P.
-        %span.caps IVA
-        04049410485
-      .separator5
-      %p
-        %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"}
-          %i.fa.fa-facebook-square &nbsp; Facebook
-        %br/
+      .col7.line-tablet
+        .separator15
+        %p
+          Viale Michelangiolo 19, 50125
+          %span.caps FIRENZE
+          %br/
+          %span.caps TEL
+          |
+          = succeed ":" do
+            %span.caps FAX
+            +39 055 681 32 11
+          %br/
+          da Lunedì a Venerdì 9.00-13.00, 16.00-18.00
+        %p
+          %strong email
+          %br/
+          %a{:href => "mailto:info@accademiacappiello.it"} info@accademiacappiello.it
+        %p
+          N°Iscrizione
+          %span.caps CCIAA
+          di Firenze e P.
+          %span.caps IVA
+          04049410485
         .separator5
-        %a{:href => "https://twitter.com/Acc_Cappiello"}
-          %i.fa.fa-twitter &nbsp; Twitter
-      %p
-        %a{:href => "http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A"}
-          %span.caps COME
-          %span.caps RAGGIUNGERCI
-      %p
-        %a{:href => "/pages/info"}
-          Iscriviti alla
-          %span.caps NEWSLETTER
-      %p
+      .col3.line-tablet
+        %p
+          %a{:href => "https://www.facebook.com/accademiaartedesigncappiello"}
+            %i.fa.fa-facebook-square &nbsp; Facebook
+          %br/
+          .separator5
+          %a{:href => "https://twitter.com/Acc_Cappiello"}
+            %i.fa.fa-twitter &nbsp; Twitter
+        %p
+          %a{:href => "http://maps.google.it/maps?client=safari&oe=UTF-8&ie=UTF8&q=accademia+cappiello+firenze&fb=1&gl=it&hq=accademia+cappiello&hnear=Florence&t=h&z=16&iwloc=A"}
+            %span.caps COME
+            %span.caps RAGGIUNGERCI
+        %p
+          %a{:href => "/pages/info"}
+            Iscriviti alla
+            %span.caps NEWSLETTER
+        %p
   .separator50
