--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -2,7 +2,7 @@
 .line.bg-white
   .line-compress.line-max
     .separator15
-    %h1.line.center-content-tablet
+    %h1.line.center-content.article-title.font-custom
       Contatti
     .separator10
     .separator15.pattern
