--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -103,6 +103,11 @@ opacity:.6;
 opacity:1;
 cursor: pointer;
 }
+.logo{
+  width:100%;
+  min-width: 200px;
+  max-width:220px;
+}
 .header.scrolling , .header-scrolling *{
   transition: all .25s linear;
 }
