--- a/app/views/pages_new/_contatti.haml
+++ b/app/views/pages_new/_contatti.haml
@@ -1,5 +1,5 @@
 
-.line.bg-white
+.line.bg-white#contatti
   .line-compress.line-max
     .separator15
     %h1.line.center-content.article-title.font-custom
