--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -29,8 +29,9 @@
           .separator5
     .separator30
     .line.article
-      #photos{"data-set-id" => "72157659720037219"}
-        %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/ID/"}
+      #photos{"data-set_id" => "72157631510132935"}
+
+      %a.flickr_button{:href => "http://www.flickr.com/photos/accademiacappiello/sets/72157659720037219/"}
     .separator30
   .separator50
 / GALLERY
