--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -100,6 +100,7 @@
     %link{:href => "/stylesheets/vendor/font-awesome/font-awesome.min.css", :rel => "stylesheet"}/
     -# TODO UI salvare il font
     %link{:href => "https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,700,600italic,600,400italic,300italic,300&subset=latin,cyrillic-ext", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "/stylesheets/fancybox.css", :rel => "stylesheet"}/
     = stylesheet_link_tag "main_responsive"#, :cache =>  "cache/all"
     - unless Rails.env == "production"
       - debug = " anonym_id: #{session[:anonym_id]}"
