--- a/app/views/pages_new/_corsi.haml
+++ b/app/views/pages_new/_corsi.haml
@@ -1,9 +1,9 @@
 .line.bg-muted#corsi
   .line-compress.line-max
-    .separator15
-    %h1.line.center-content.article-title.font-custom
+    .separator50
+    %h1.line.color-muted.center-content.article-title.font-custom
       I Corsi
-    .separator10
+    .separator30
     .separator15.pattern
     .separator30
     .line.article
@@ -33,7 +33,7 @@
                 Info
           .separator15
         - if idx % 3 == 2
-          .separator15
+          .separator30
 
   .separator50
   .separator30
