--- a/app/views/pages_new/_gallery.haml
+++ b/app/views/pages_new/_gallery.haml
@@ -1,10 +1,10 @@
 / GALLERY
-.line.bg-white#gallery
+.line.bg-muted#gallery
   .line-compress.line-max
-    .separator15
-    %h1.line.center-content.article-title.font-custom
+    .separator50
+    %h1.line.color-muted.center-content.article-title.font-custom
       La Gallery
-    .separator10
+    .separator30
     .separator15.pattern
     .separator30
     .line.center-content
