--- a/app/views/pages_new/_borse_di_studio.haml
+++ b/app/views/pages_new/_borse_di_studio.haml
@@ -8,6 +8,20 @@
     .separator15.pattern
     .separator30
     .line.article
-    MANCA QUI LA PAGINA ?
+    %p L’Accademia mette in palio 10 Borse di Studio per frequentare i corsi 15 mesi di Grafica Pubblicitaria, Interior Design in partenza il prossimo 29 febbraio 2016.
+    %p Le Borse di Studio in palio contribuiranno a coprire il costo del primo modulo del corso prescelto per il 50%.
+    %p Alla fine del primo modulo di corso si potrà partecipare all’assegnazione di Borse di Studio al 50% per frequentare il secondo modulo sulla base della media del profitto ottenuto.
+    %p La possibilità di poter frequentare i corsi mediante Borse di Studio è nata dalla necessità di estendere ad un maggior numero di giovani l’opportunità di conseguire la specializzazione necessaria per un futuro nel mondo del lavoro.
+    %p Il termine per la presentazione delle richieste di Borsa di Studio scade il 30 gennaio 2016.
 
-    .separator30
+    .separator100
+    .line
+      .col3.line-tablet
+      .col4.line-tablet
+        %a.line.center-content.btn.btn-medium.color-white.bg-primary
+          .separator3
+          %h4
+            INVIA CANDIDATURA
+          .separator3
+      .col3.line-tablet
+    .separator100
