--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -66,7 +66,8 @@ font-size: 11px; }
 
 .pattern {
 opacity: 0.25;
-background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII="); }
+background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAI0lEQVQIW2NkwAT/GdHE/gP5jMiCYAGQIpggXAAmiCIAEgQAAE4FBbECyZcAAAAASUVORK5CYII=");
+}
 
 /*Extra */
 .article img {
@@ -106,7 +107,7 @@ cursor: pointer;
 .logo{
   width:100%;
   min-width: 200px;
-  max-width:220px;
+  max-width:210px;
 }
 .header.scrolling , .header-scrolling *{
   transition: all .25s linear;
