--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -218,7 +218,6 @@
           .col2.line-tablet.center-content-tablet
             %a{:href => "/pag/l_accademia"}
               %img.logo.scroll{:src => "/images/logo.png"}
-              %img.logo.no-scroll{:src => "/images/logo-white.png"}
 
           .col8.right-content.desktop
             .header-menu.desktop
@@ -241,11 +240,15 @@
           %a.line.center-content{:href=> js_void}
             %i.fa.fa-play-circle.play-home-video.color-white
           .separator100
-          .separator50
+          .separator30.desktop
           .slogan
-            %h1.color-white.font-custom
+            .line.center-content-tablet
+              %img.logo.no-scroll{:src => "/images/logo-white.png"}
+            .separator30.mobile
+            .separator15
+            %h1.color-white.font-custom.center-content-tablet
               Dal 1956,
-              %h2.color-white.line il luogo ideale per esprimere la propria creatività
+              %h2.color-white.line.center-content-tablet il luogo ideale per esprimere la propria creatività
         .separator15
       / end header and menu
 
