--- a/app/views/pages_new/l_accademia.haml
+++ b/app/views/pages_new/l_accademia.haml
@@ -27,3 +27,5 @@
   = render partial: "pages_new/gallery"
   .separator30
   = render partial: "pages_new/contatti"
+  .separator30
+  = render partial: "pages_new/footer"
