--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -1,10 +1,10 @@
 / footer
 %footer.footer.bg-black.line-compress
   .separator30
-  .line
+  .line.line-footer
     .col4.line-tablet.center-content-tablet
       %img{:src => "/images/logo-footer.png", :width => "200"}
-    .col6.line-tablet.right-content.center-content-tablet
+    .col5.line-tablet.right-content.center-content-tablet
       .separator15
       .separator15.tablet.mobile
       %a.toggle-opacity-hover.color-muted-inverse{:href => "https://www.facebook.com/accademiaartedesigncappiello", :target => "_blank"}
@@ -19,7 +19,7 @@
         %i.fa.fa-2x.fa-vimeo
       .separator30.tablet.mobile
   .separator15
-  .line.center-content-tablet
+  .line.line-footer.center-content-tablet
     .col5.line-tablet
       .col5.line-tablet.color-white
         .separator30
