--- a/app/views/pages_new/_footer.haml
+++ b/app/views/pages_new/_footer.haml
@@ -23,7 +23,7 @@
     .col5.line-tablet
       .col5.line-tablet.color-white
         .separator30
-        %h3 La Scuola
+        %h3.color-muted-inverse La Scuola
         %ul
           .separator10
           %li
@@ -42,7 +42,7 @@
             %a.color-white.toggle-opacity-hover{:href => "#"} Utilizzo dei Cookies
       .col5.line-tablet.color-white
         .separator30
-        %h3 Opportunità
+        %h3.color-muted-inverse Opportunità
         %ul
           .separator10
           %li
@@ -53,7 +53,7 @@
     .col5.line-tablet.line-tablet
       .col5.line-tablet.color-white
         .separator30
-        %h3 Per le aziende
+        %h3.color-muted-inverse Per le aziende
         %ul
           .separator10
           %li
@@ -63,7 +63,7 @@
             %a.color-white.toggle-opacity-hover{:href => "#"} Offerte di lavoro
       .col5.line-tablet.color-white
         .separator30
-        %h3 Corsi e Master
+        %h3.color-muted-inverse Corsi e Master
         %ul
           .separator10
           %li
