--- a/public/stylesheets/main_responsive.css
+++ b/public/stylesheets/main_responsive.css
@@ -2,13 +2,18 @@ body *, html * {
 letter-spacing: initial;
 letter-spacing: "";
 font-weight: 300;
-font-family: "Open Sans", Helvetica Neue, Arial, sans-serif; }
+font-family: "Open Sans", Helvetica Neue, Arial, sans-serif;
+}
+body,html {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 .font-custom{
 font-family: 'Montserrat';
 }
 #cookies{
   z-index:999999;
-background: rgba(0, 0, 0, .7);
+  background: black;
 }
 #map_canvas{
 min-height:350px;
@@ -26,7 +31,6 @@ width:100%;
 clear: both;
 }
 #slide{
-
 background: -moz-linear-gradient(top,  rgba(0,0,0,0.2) 0%, rgba(0,0,0,0.6) 67%, rgba(0,0,0,0.7) 78%, rgba(0,0,0,1) 99%);
 background: -webkit-linear-gradient(top,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%);
 background: linear-gradient(to bottom,  rgba(0,0,0,0.2) 0%,rgba(0,0,0,0.6) 67%,rgba(0,0,0,0.7) 78%,rgba(0,0,0,1) 99%), url('../images/home.jpg');
