--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -257,7 +257,7 @@
           .separator100
           .separator50.desktop
           .separator30
-          %a.line.center-content{:href=> js_void}
+          %a#video-home.line.center-content{:href=> "https://www.youtube.com/watch?v=_5BJ4VrkENw&autoplay=1"}
             %i.fa.fa-play-circle.play-home-video.color-white
           .separator100
           .separator30.desktop
@@ -305,6 +305,29 @@
           DynamicMenuBar();
         });
         DynamicMenuBar();
+      :javascript
+        $("#video-home").on('click', function(e) {
+        $.fancybox({
+                "padding" : 0,
+                "margin": 20,
+                "minWidth": window.innerWidth - window.innerWidth / 8,
+                "minHeight": window.innerHeight - window.innerHeight / 8,
+                "fitToView": true,
+                "scrolling": "no",
+                "closeBtn": true,
+                "scrollOutside": false,
+                "type" : 'swf',
+                'centerOnScroll': true,
+                'hideOnOverlayClick': true,
+                "showNavArrows": false,
+                "enableEscapeButton": true,
+                "autoDimension": true,
+                "overlayOpacity": 1,
+                'href' : this.href.replace(new RegExp("watch\\?v=", "i"), 'v/'),
+                'swf' : { 'wmode' : 'transparent', 'allowfullscreen' : 'true' }
+            });
+        e.preventDefault();
+        });
       :javascript
         var bar = document.querySelector(".cookie_bar")
           , btn = document.querySelector("#cookie_btn")
