--- a/app/views/layouts/responsive.html.haml
+++ b/app/views/layouts/responsive.html.haml
@@ -245,14 +245,14 @@
               .separator10
               - nav_link :l_accademia
 
-              %a{ href: "#corsi" } Corsi
+              %a{ href: "/#corsi" } Corsi
               -# nav_link :corsi
               - nav_link :news
-              %a{ href: "#gallery" } La Gallery
+              %a{ href: "/#gallery" } La Gallery
               -# nav_link :gallery
               - nav_link :borse_di_studio
               - nav_link :open_days
-              %a{ href: "#contatti" } Contatti
+              %a{ href: "/#contatti" } Contatti
               -# nav_link :contatti
           .separator100
           .separator50.desktop
